--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-chai": "^0.1.0",
     "bower": "^1.3.8",
-    "generator-snello": "git://github.com/Meesayen/generator-snello.git#master"
+    "generator-snello": "git://github.com/Meesayen/generator-snello.git#master",
     "yo": "^1.2.0"
   }
 }
