--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "karma start"
+    "test": "./node_modules/.bin/karma start"
   },
   "dependencies": {
     "express": "~4.2.0",
