--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sudo apt-get update -qq
-  - npm install
   - bower install
+
+before_script:
+  - 'npm install -g karma'
+
